--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -47,6 +47,7 @@
            <ul class="nav navbar-nav">
              <li <% if (page_name === 'dashboard') { %>class="active" <% } %> ><a href="/project/dashboard"> <span class="glyphicon glyphicon-tasks" aria-hidden="true" > </span> Dashboard</a></li>
              <li <% if (page_name === 'newproject') { %>class="active" <% } %>><a href="/project/newproject">새 프로젝트</a></li>
+             <li <% if (page_name === 'templates') { %>class="active" <% } %>><a href="/project/templates">템플릿</a></li>
              <li <% if (page_name === 'updateproject') { %>class="active" <% } %>> <a href=""> 프로젝트 수정 </a> </li>
            </ul>
            <ul class="nav navbar-nav navbar-right">
