--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,24 +23,6 @@
 
   </head>
   <body>
-    <!--p>마현주님 안녕하세요!</p--> <!--위 타이틀처럼 @@님 형태로 js가져올것-->
-    <!--ul>
-      <li> <a class="active" href="#home"> HOME </a> </li>
-      <li class="projects">
-        <a href="myproject" class="dropbtn"> MY PROJECT </a>
-        <div class="dropdown-content">
-          <a href="project1"> Project 1 </a>
-          <a href="project2"> Project 2 </a>
-          <a href="project3"> Project 3 </a>
-        </div>
-      </li>
-      <li> <a href="newproject"> NEW PROJECT </a> </li>
-      <li> <a href="messages"> MESSAGES </a> </li>
-      <li style="float:right"> <a href="mypage"> MY PAGE </a> </li>
-    </ul-->
-
-    <!--% include ./menu.ejs %-->
-
 
     <!-- Top content -->
     <div class="top-content">
@@ -52,9 +34,6 @@
                     <div class="col-sm-8 col-sm-offset-2 text">
                         <h1><strong>PMO Product Repository</strong></h1>
                         <div class="description">
-                          <p>
-                            로그인해주세요
-                          </p>
                         </div>
                     </div>
                 </div>
@@ -67,7 +46,7 @@
                         <div class="form-top">
                           <div class="form-top-left">
 <!--                             <h3>Login to our site</h3> -->
-                              <p>Enter username and password to log on:</p>
+                              <p>이름과 비밀번호를 입력해주세요</p>
                           </div>
                           <div class="form-top-right">
                             <i class="fa fa-lock"></i>
@@ -83,8 +62,8 @@
                               <label class="sr-only" for="form-password">Password</label>
                               <input type="password" name="pw" placeholder="Password..." class="form-password form-control" id="pw">
                             </div>
-                            <button type="submit" class="btn">Sign in!</button>
-                            <a href="/dashboard" class="btn" role="button">Go to Dashboard</a>  <!--세션 없이는 어차피 못가게 되었으므로 없앨것-->
+                            <button type="submit" class="btn">로그인</button>
+                            <a href="project/dashboard" class="btn" role="button">대시보드 가기</a>
                         </form>
                         </div>
                       </div> <!--formbox-->
@@ -101,8 +80,7 @@
 
           <div class="col-sm-8 col-sm-offset-2">
             <div class="footer-border"></div>
-            <p>SK C&C <strong> PMO </strong>
-            <i class="fa fa-smile-o"></i></p>
+            <p>SK주식회사 C&C <strong> PMO </strong>
           </div>
         </div>
       </div>
@@ -113,10 +91,6 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="common/js/jquery.backstretch.min.js"></script>
     <script src="common/js/signin.js"></script>
-
-    <!--[if lt IE 10]>
-        <script src="assets/js/placeholder.js"></script>
-    <![endif]-->
 
   </body>
 
