--- a/public/common/css/signin.css
+++ b/public/common/css/signin.css
@@ -49,11 +49,11 @@ textarea::-webkit-input-placeholder, textarea.form-control::-webkit-input-placeh
 
 button.btn {
 	height: 50px;
-  align: center;
+  float: middle;
     margin: 0;
     padding: 0 20px;
     vertical-align: middle;
-    background: rgb(255, 123, 0);
+    background: #ED4C00;
     border: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -70,6 +70,6 @@ button.btn:hover { opacity: 0.6; color: #fff; }
 
 button.btn:active { outline: 0; opacity: 0.6; color: #fff; -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; }
 
-button.btn:focus { outline: 0; opacity: 0.6; background: rgb(255, 123, 0); color: #fff; }
+button.btn:focus { outline: 0; opacity: 0.6; background: #ED4C00; color: #fff; }
 
-button.btn:active:focus, button.btn.active:focus { outline: 0; opacity: 0.6; background: rgb(255, 123, 0); color: #fff; }
+button.btn:active:focus, button.btn.active:focus { outline: 0; opacity: 0.6; background: #ED4C00; color: #fff; }
