--- a/public/common/css/progressbar.css
+++ b/public/common/css/progressbar.css
@@ -45,8 +45,8 @@
       color: #e62e00;
   }
   .progressbar li.active:before {
-      border-color: #55b776;
+      border-color: #e62e00;
   }
   .progressbar li.active + li:after {
-      background-color: #55b776;
+      background-color: #e62e00;
   }
