--- a/public/common/css/style.css
+++ b/public/common/css/style.css
@@ -11,7 +11,7 @@ body {
 strong { font-weight: 500; }
 
 a, a:hover, a:focus {
-	color: rgb(255, 123, 0);;
+	color: #ED4C00;
 	text-decoration: none;
     -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
@@ -33,8 +33,8 @@ h3 {
 
 img { max-width: 100%; }
 
-::-moz-selection { background: rgb(255, 123, 0); color: #505050; text-shadow: none; }
-::selection { background: rgb(255, 123, 0); color: #505050; text-shadow: none; }
+::-moz-selection { background: #ED4C00; color: #505050; text-shadow: none; }
+::selection { background: #ED4C00; color: #505050; text-shadow: none; }
 
 
 .btn-link-1 {
