--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -98,11 +98,8 @@
                    설명: <input type="text" name="pdesc" value="<%= project.pdesc %>" class="form-projectdesc form-control" id="pdesc">
               </div>
 
-              <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button>
+              <button type="submit" class="btn" style="margin:auto; display:block;"> 수정 </button>
             </form>
-            <button> <a href="/project/delete/<%=project._id%>" onclick="return confirm('프로젝트를 정말 삭제하시겠습니까?');"> 프로젝트 삭제 </a> </button>
-            <!-- <button type='button' id="<%=project._id %>" class="btn" style="display:inline;" onclick="/"> 프로젝트 삭제 </button> -->
-
 
                 <div class="input-group">
                   Task <br>
@@ -131,7 +128,7 @@
 
                   <!--input type="checkbox" name="task" value="bp" checked> 인력/BP 관리<br-->
                 </div><!-- /input-group -->
-                <a href="/project/<%=project._id%>"> 내 프로젝트로 이동 </a> &nbsp;&nbsp; <a href="/project/dashboard"> 대시보드로 이동 </a>
+                <a href="/project/<%=project._id%>"> 내 프로젝트로 이동 </a> &nbsp;&nbsp; <a href="/project/dashboard"> 대시보드로 이동 </a> &nbsp;&nbsp; <a href="/project/delete/<%=project._id%>" onclick="return confirm('프로젝트를 정말 삭제하시겠습니까?');"> <strong> 프로젝트 삭제 </strong> </a>
 
 
           </div>
