--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
                               <input type="password" name="pw" placeholder="Password..." class="form-password form-control" id="pw">
                             </div>
                             <button type="submit" class="btn">로그인</button>
-                            <a href="project/dashboard" class="btn" role="button">대시보드 가기</a>
+                            <a href="/project/dashboard" class="btn" role="button">대시보드 가기</a>
                         </form>
                         </div>
                       </div> <!--formbox-->
